# mp3_playa

./: CHANGELOG.md  README.md  pyproject.toml
src/: main.py
src/back_end/: app.py  database.py
src/back_end/end_points/: song_list.py
src/backend/: app.py  database.py
src/backend/routes/: play_song.py  song_list.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.jsx  api.js  index.css  main.jsx
src/frontend/src/pages/: Home.jsx  NowPlaying.jsx  SongList.jsx
src/models/: __init__.py  model.py  song_db_schema.py
